[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Christoph Becker", email = "mail@ch-becker.de"},
]
dependencies = [
    "requests>=2.28.1",
    "fastapi>=0.79.0",
    "uvicorn>=0.18.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
